# tfm

./: .gitignore  Makefile  README.md  check_burst_test_env.sh  clean_burst_cluster.sh  numa_experiment.py  plot_vcost_numa.py  rebuild_cost_aggregates.py  restore_burst_cluster.sh  run_algorithm_correctness_tests.sh  run_e2e_tests.sh  run_numa_all.sh  run_rest_campaign.sh  run_vcost.sh  run_vcost_snap.sh  snapshot_burst_cluster.sh
baselines/: OPENWHISK_FAIR_CPU.md  README.md  cloudlab_spark_smoke_validate.py  openwhisk_action_cpu_limitrange.yaml  run_spark_graph_benchmarks.py
baselines/cloudlab/: Dockerfile.spark-s3a  README.md  build-spark-s3a-image.sh  cleanup-spark-lp-smoke.sh  deploy-spark-lp-smoke.sh  deploy-spark-smoke.sh  run-remote-bfs-smoke.sh  run-remote-lp-smoke.sh  run-remote-pagerank-smoke.sh  run-remote-sssp-smoke.sh
baselines/scripts/: bfs_graphx_shell.scala  connected_components_shell.scala  labelpropagation_graphx_shell.scala  louvain_graphx_shell.scala  sssp_graphx_shell.scala  submit-bfs.sh  submit-louvain.sh  submit-pagerank.sh
bfs/: .gitignore  README.md  benchmark_bfs.py  bfs.py  bfs_utils.py  compile_bfs_cluster.sh  compile_bfs_cost_backends.sh  pyproject.toml  requirements.txt  run_cloudlab_smoke_bfs.sh  run_cloudlab_smoke_bfs_spark.sh  setup_large_bfs_data.py  tfm-bfs-agent.md
bfs/bfs-mpi/: Cargo.toml
bfs/bfs-mpi/src/: lib.rs  main.rs
bfs/bfs-rayon/: Cargo.toml
bfs/bfs-rayon/src/: lib.rs  main.rs
bfs/bfs-standalone/: Cargo.toml
bfs/bfs-standalone/src/: lib.rs  main.rs
bfs/ow-bfs/: Cargo.toml
bfs/ow_client/: openwhisk_executor.py  parser.py
burst-communication-middleware/: .gitignore  API.md  Cargo.toml  EXPLICACION.md  README.md
burst-communication-middleware/examples/: broadcast.rs  gather_remote.rs  hello_world_local.rs  hello_world_remote.rs  large_broadcast.rs  large_send.rs  reduce.rs
burst-communication-middleware/src/: actor.rs  chunk_store.rs  lib.rs  message_buffer.rs  middleware.rs  types.rs
burst-communication-middleware/src/backends/: mod.rs  rabbitmq.rs  redis_list.rs  redis_stream.rs  s3.rs  tokio_channel.rs
campaigns/: .gitignore  CAMPAIGN_OPS.md  REAL_DATASETS.md  REPRODUCTION.md  cloudlab_common.py  cost_backends.py  launch_campaign_v3.sh  launch_full_campaign.sh  launch_replicas.sh  preflight_gate.py  report_generators.py  run_cloudlab_campaign.py  run_cloudlab_lp_campaign.py  validate_cross_paradigm.py  validate_implementations.sh  validate_implementations_cluster.sh
campaigns/scripts/: README.md  bfs_rerun.py  extra_datasets_runner_v2.py  lp_mpi_fixed_lib.rs  lp_mpi_rerun.py  lp_rerun.py  lpst_fixed_lib.rs  patch_pr_data.py  plot_extra.py  plot_pr_numa_profile.py  pr_numa_profile.py  pr_rerun.py  sssp_rayon_fixed_lib.rs  sssp_rerun.py  summarize_extra.py
data_utils/: generate_payload.py  setup_large_bfs_data.py  setup_large_cf_data.py  setup_large_gb_data.py  setup_large_lp_data.py  upload_to_minio.py  upload_to_minio_bfs.py  upload_to_minio_cf.py  upload_to_minio_gb.py
infra/: benchmark_runtime_probe.py  resource_capacity.py  runtime_metrics.py
infra/ow_client/: openwhisk_executor.py  result_dataset.py
labelpropagation/: .gitignore  README.md  benchmark_lp.py  benchmark_runtime_probe.py  burst-communication-middleware  compile_lp_cluster.sh  compile_lp_cost_backends.sh  compile_runtime_probe_cluster.sh  labelpropagation.py  labelpropagation_utils.py  pyproject.toml  run_cloudlab_smoke_lp.sh  run_cloudlab_smoke_lp_spark.sh  runtime_metrics.py  setup_large_lp_data.py  tfm-lp-agent.md  validate_results.py
labelpropagation/lp-mpi/: Cargo.toml
labelpropagation/lp-mpi/src/: lib.rs  main.rs
labelpropagation/lp-rayon/: Cargo.toml
labelpropagation/lp-rayon/src/: lib.rs  main.rs
labelpropagation/lpst/: Cargo.toml  README.md  analyze_10m.py
labelpropagation/lpst/src/: graph_generator.rs  lib.rs  main.rs
labelpropagation/ow-lp/: Cargo.toml
labelpropagation/ow-runtime-probe/: Cargo.toml
labelpropagation/ow-runtime-probe/src/: lib.rs
labelpropagation/ow_client/: openwhisk_executor.py
labelpropagation/spark_baseline/: OPENWHISK_FAIR_CPU.md  README.md  docker-compose.yml  run_spark_graph_benchmarks.py
openwhisk-deploy-kube-burst/: GUIA_PAGERANK_BURST.md  README.md  expose-ow.sh  infrastructure.yaml  minio.yaml  mycluster.yaml  start-exposed.sh
openwhisk-deploy-kube-burst/cloudlab/: README.md  cleanup-smoke-openwhisk.sh  deploy-smoke-openwhisk.sh  ow-sconde-smoke-values.yaml  owdev-cloudlab-values.yaml  port-forward-smoke-openwhisk.sh  provision_mpi.sh
openwhisk-deploy-kube-burst/docs/: k8s-diy-ubuntu.md
openwhisk-deploy-kube-burst/eks/: 960spot.yaml  ow-burst.yaml  ow-classic.yaml  pagerank.yaml  terasort-half.yaml  (+1 more)
pagerank/: .gitignore  benchmark_pagerank.py  compile_pagerank_cluster.sh  compile_pagerank_cost_backends.sh  pagerank_utils.py  run_cloudlab_smoke_pagerank_spark.sh  setup_large_pagerank_data.py
pagerank/pagerank-mpi/: Cargo.toml
pagerank/pagerank-mpi/src/: lib.rs  main.rs
pagerank/pagerank-rayon/: Cargo.toml
pagerank/pagerank-rayon/src/: main.rs
pagerank/pagerank-standalone/: Cargo.toml
pagerank/pagerank-standalone/src/: main.rs
sssp/: .gitignore  README.md  benchmark_sssp.py  compile_sssp_cluster.sh  compile_sssp_cost_backends.sh  pyproject.toml  run_cloudlab_smoke_sssp.sh  run_cloudlab_smoke_sssp_spark.sh  setup_large_sssp_data.py  sssp.py  sssp_utils.py  tfm-sssp-agent.md
sssp/sssp-mpi/: Cargo.toml
sssp/sssp-mpi/src/: lib.rs  main.rs
sssp/sssp-rayon/: Cargo.toml
sssp/sssp-rayon/src/: lib.rs  main.rs
sssp/sssp-standalone/: Cargo.toml
sssp/sssp-standalone/src/: lib.rs  main.rs
tests/: .gitignore  README.md  determinism_compare.py  determinism_fixtures.py  known_answers.py  oracle.py  requirements-test.txt  test_burst_compute_only_proxy.py  test_burst_payload_generation.py  test_campaign_sizing.py  test_canonical_metrics.py  test_cost_sweep_orchestrator.py  test_cross_backend_correctness.py  test_determinism_proof.py  test_oracle_correctness.py  test_resource_capacity.py  test_runtime_metrics.py
tools/: validate_cloudlab_graph_output.py
(+41 files in other folders)
