[package]
name = "burst-communication-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
futures = "0.3.29"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
env_logger = "0.9.3"
uuid = { version = "1.5.0", features = ["v4"] }
dashmap = "5.5.3"
lapin = { version = "2.3.1", optional = true }
deadpool-lapin = { version = "0.11.0", optional = true }
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
deadpool-redis = { version = "0.14.0", optional = true }
aws-sdk-s3 = { version = "1.29.0", features = [
    "behavior-version-latest",
], optional = true }
aws-config = { version = "1.4.0", features = [
    "behavior-version-latest",
], optional = true }
aws-credential-types = { version = "1.2.0", features = [
    "hardcoded-credentials",
], optional = true }

[features]
default = ["tokio_channel"]
rabbitmq = ["dep:lapin", "dep:deadpool-lapin"]
redis_list = ["dep:redis", "dep:deadpool-redis"]
redis_stream = ["dep:redis", "dep:deadpool-redis"]
redis = ["redis_list", "redis_stream"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types"]
tokio_channel = []

[[example]]
name = "broadcast"
required-features = ["redis", "rabbitmq", "s3"]

[[example]]
name = "gather_remote"
required-features = ["redis", "rabbitmq", "s3"]

[[example]]
name = "hello_world_local"
required-features = ["rabbitmq"]

[[example]]
name = "hello_world_remote"
required-features = ["redis_list", "rabbitmq"]

[[example]]
name = "large_broadcast"
required-features = ["redis", "rabbitmq", "s3"]

[[example]]
name = "large_send"
required-features = ["redis", "rabbitmq", "s3"]

[[example]]
name = "reduce"
required-features = ["redis", "rabbitmq", "s3"]
