[package]
name = "bfs-rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
bfs-standalone = { path = "../bfs-standalone" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "bfs_rayon"
path = "src/lib.rs"

[[bin]]
name = "bfs-rayon"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
