[package]
name = "bfs-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "bfs_standalone"
path = "src/lib.rs"

[[bin]]
name = "bfs-standalone"
path = "src/main.rs"

[[bin]]
name = "generate-bfs-graph"
path = "src/bin/generate_graph.rs"

[profile.release]
lto = "thin"
codegen-units = 1
