[package]
name = "label-propagation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
name = "label_propagation"
path = "src/lib.rs"

[[bin]]
name = "label-propagation"
path = "src/main.rs"

[[bin]]
name = "generate_graph"
path = "src/bin/generate_graph.rs"

[[bin]]
name = "run_label_propagation"
path = "src/bin/run_label_propagation.rs"
