[package]
name = "pagerank-rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
pagerank-core = { path = "../pagerank-core" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pagerank-rayon"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
