[package]
name = "pagerank-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
pagerank-core = { path = "../pagerank-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "pagerank-standalone"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
