[package]
name = "sssp-standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "sssp_standalone"
path = "src/lib.rs"

[[bin]]
name = "sssp-standalone"
path = "src/main.rs"

[[bin]]
name = "generate-sssp-graph"
path = "src/bin/generate_graph.rs"
